--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,133 @@
+html * {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    background-color: #313338;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+#root {
+    height: 100%;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
+h1 {
+    display: flex;
+    color: white;
+    justify-content: center;
+}
+
+.chatroom-container {
+    overflow-y: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    overflow: auto;
+    padding: 0 10px;
+    padding-top: 50px;
+}
+
+.chatroom {
+    margin-top: auto;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+}
+
+.chatroom-message-container {
+    display: flex;
+}
+
+.client-con {
+    justify-content: flex-end;
+}
+
+.other-con {
+    justify-content: flex-start;
+}
+
+.chatroom-message {
+    width: fit-content;
+    min-height: 30px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    padding: .2rem .5rem;
+    max-width: 45%;
+    color: white;
+    word-break: normal;
+}
+
+.client {
+    background-color: rgb(62, 150, 221);
+    text-align: end;
+}
+
+.other {
+    background-color: rgb(66, 211, 97);
+    text-align: start;
+}
+
+.chatroom-inputs {
+    padding: 10px 0;
+    margin: 10px 0;
+    display: flex;
+    justify-content: center;
+}
+
+input {
+    color: white;
+    outline: none;
+    border: 1px solid black;
+    padding: 4px 5px;
+}
+
+input::placeholder {
+    color: rgba(0, 0, 0, 0.336);
+}
+
+
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
