--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,4 @@
-/* html * {
-    margin: 0;
-    /* height: 100%;
-    width: 100%; */
-
-*/ body {
+* body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
