--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,11 +19,27 @@ body,
     height: 100%;
 }
 
+.App{
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+
+.Nav{
+    background-color: #2b2d30;
+    color: white;
+}
+
+.Nav div{
+    padding: 0 .5rem;
+}
+
 .chatroom {
     display: flex;
     flex-direction: column;
     height: 100%;
     background-color: #313338;
+    width: 100%;
 }
 
 .chatroom-title {
