--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,12 +40,17 @@ body,
 .user-info {
     background-color: rgba(0, 0, 0, 0.253);
     display: flex;
+    gap: 10px;
+}
+
+.user-info-avatar {
+    border-radius: 50%;
 }
 
 .chatroom {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    /* height: 100%; */
     background-color: #313338;
     flex-grow: 1;
 }
@@ -59,13 +64,13 @@ body,
 
 .chatroom-chat-container {
     overflow-y: auto;
-    height: 100%;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     gap: 5px;
     overflow: auto;
     padding: 0 10px;
-    padding-top: 50px;
+    /* padding-top: 50px; */
     scrollbar-gutter: stable both-edges;
 }
 
@@ -78,8 +83,9 @@ body,
 
 .chatroom-message-container {
     display: flex;
-    gap: 10px;
+    margin-top: 10px;
     align-items: center;
+    gap: 10px;
 }
 
 .client-con {
@@ -271,15 +277,28 @@ body,
     border-radius: 5px;
 }
 
+.chatroom-title-container-container {
+    position: relative;
+}
+
 .chatroom-title-container {
     width: 100%;
     box-shadow: #0003 0 4px 6px -1px, #0000001f 0 2px 4px -1px;
-    margin: 5px 0;
+    /* margin: 5px 0; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    height: 48px;
+}
+
+.chatroom-title-picture {
+    border-radius: 50%;
 }
 
 .rooms-title {
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
     padding: .5rem .5rem;
     align-items: baseline;
 }
@@ -297,14 +316,19 @@ body,
     display: flex;
     gap: .4rem;
     align-items: center;
-    margin: .4rem .5rem;
+    margin: .2rem .5rem;
     padding: .2rem .3rem;
     border-radius: 4px;
 }
 
 .room:hover {
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.185);
+    background-color: rgba(0, 0, 0, 0.116);
+}
+
+.current-room,
+.current-room:hover {
+    background-color: rgba(0, 0, 0, 0.212);
 }
 
 .room-name {
@@ -321,4 +345,9 @@ body,
 
 .room-picture {
     border-radius: 50%;
+}
+
+.finder-container {
+    height: 48px;
+    box-shadow: #0003 0 4px 6px -1px, #0000001f 0 2px 4px -1px;
 }
