--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,10 @@ input[type=submit] {
     border: none;
 }
 
+:root {
+    --picture: 50%;
+}
+
 /* input:-internal-autofill-selected {
     background-color: none;
 } */
@@ -28,7 +32,7 @@ body,
 .Nav {
     background-color: #2b2d30;
     color: white;
-    /* width: 130px; */
+    width: 240px;
     display: flex;
     flex-direction: column;
 }
@@ -44,7 +48,7 @@ body,
 }
 
 .user-info-avatar {
-    border-radius: 50%;
+    border-radius: var(--picture);
 }
 
 .chatroom {
@@ -115,7 +119,7 @@ body,
 }
 
 .other {
-    background-color: rgb(66, 211, 97);
+    background-color: rgb(30 31 32);
     text-align: start;
 }
 
@@ -135,7 +139,7 @@ body,
 .chatroom-message-avatar {
     height: 50px;
     width: 50px;
-    border-radius: 50%;
+    border-radius: var(--picture);
 }
 
 .chatroom-inputs-container {
@@ -293,14 +297,15 @@ body,
 }
 
 .chatroom-title-picture {
-    border-radius: 50%;
+    border-radius: var(--picture);
 }
 
 .rooms-title {
     display: flex;
-    gap: 2rem;
+    justify-content: space-between;
     padding: .5rem .5rem;
     align-items: baseline;
+    cursor: default;
 }
 
 .rooms-title-text {
@@ -326,8 +331,7 @@ body,
     background-color: rgba(0, 0, 0, 0.116);
 }
 
-.current-room,
-.current-room:hover {
+.current-room {
     background-color: rgba(0, 0, 0, 0.212);
 }
 
@@ -344,10 +348,35 @@ body,
 }
 
 .room-picture {
-    border-radius: 50%;
+    border-radius: var(--picture);
 }
 
 .finder-container {
+    padding: 0 10px;
     height: 48px;
+    display: flex;
+    align-items: center;
     box-shadow: #0003 0 4px 6px -1px, #0000001f 0 2px 4px -1px;
 }
+
+.finder {
+    padding: 1px 6px;
+    height: 28px;
+    background-color: #1e1f22;
+    width: 100%;
+    font-size: 14px;
+    border: none;
+    color: rgba(255, 255, 255, 0.425);
+    text-align: left;
+    cursor: pointer;
+}
+
+.user-info-avatar {
+    height: 40px;
+    width: 40px;
+    object-fit: cover;
+}
+
+/* .chatroom-message-avatar{
+    object-fit: cover;
+} */
