trying to break main.jsx to components

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -298,6 +298,7 @@ body,
 
 .chatroom-title-picture {
     border-radius: var(--picture);
+    object-fit: cover;
 }
 
 .rooms-title {
@@ -349,6 +350,7 @@ body,
 
 .room-picture {
     border-radius: var(--picture);
+    object-fit: cover;
 }
 
 .finder-container {
