--- a/client/src/components/Dialog/CreateGroup/CreateGroup.css
+++ b/client/src/components/Dialog/CreateGroup/CreateGroup.css
@@ -5,6 +5,7 @@
     height: 214px;
     overflow-y: auto;
     overflow-x: hidden;
+    margin-bottom: 1.5rem;
 }
 
 .friend-list-selector-item {
@@ -68,4 +69,18 @@
     color: rgba(255, 255, 255, 0.801);
     display: flex;
     align-items: center;
+}
+
+.create-group-button {
+    width: 100%;
+    color: white;
+    background-color: #5865f2;
+    padding: .5rem 0;
+    border: none;
+}
+
+.no-friends-condition-div {
+    display: flex;
+    color: white;
+    justify-content: center;
 }
