--- a/client/src/components/Dialog/CreateGroup/CreateGroup.css
+++ b/client/src/components/Dialog/CreateGroup/CreateGroup.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: .2rem;
-    height: 214px;
+    max-height: 214px;
     overflow-y: auto;
     overflow-x: hidden;
     margin-bottom: 1.5rem;
