--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,6 +34,7 @@ body,
     height: 100%;
     width: 100%;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .Nav {
@@ -77,6 +78,7 @@ body,
     justify-content: space-between;
     -webkit-user-select: none;
     user-select: none;
+    margin-top: .2rem;
 }
 
 .user-info {
@@ -229,6 +231,7 @@ body,
     height: 50px;
     width: 50px;
     border-radius: var(--picture);
+    background-color: rgb(30 31 32 / 56%);
 }
 
 .chatroom-inputs-container {
@@ -925,9 +928,15 @@ body,
     display: flex;
     flex-direction: column;
     gap: .2rem;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .skeleton-rooms {
-    overflow: hidden;
+    overflow: auto;
+}
+
+.skeleton-message {
+    height: 66px;
+    width: 20%;
+    background-color: rgb(30 31 32 / 56%);
 }
